--- a/.htaccess
+++ b/.htaccess
@@ -16,3 +16,6 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
 mod_gzip_item_exclude mime ^image/.*
 mod_gzip_item_include handler ^cgi-script$
 </ifModule>
+
+AddType text/x-server-parsed-html .html .shtml
+AddType application/x-httpd-php .html
