--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "type": "module",
   "dependencies": {
-    "@bufferhead/nightowl": "^0.0.14"
+    "@bufferhead/nightowl": "^0.0.14",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "jsdom": "^23.0.0"
