Add to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,35 @@ node_modules
 /node_modules
 package-lock.json
 package.json
+/migrations
+.DS_Store
+.vscode
+.idea
+*.log
+*.sqlite
+*.sqlite3
+*.env
+*.env.*
+*.key
+*.pem
+*.crt
+*.p12
+*.jks
+*.pfx
+*.der
+*.p7b
+*.p7c
+*.bak
+*.old
+*.swp
+*.swo
+*.swn
+*.sublime-project
+*.sublime-workspace
+*.code-workspace
+*.iml
+out/
+dist/
+build/
+coverage/
+.cache/
