--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "dependencies": {
     "@bufferhead/nightowl": "^0.0.14",
     "axios": "^1.12.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5"
   },
   "devDependencies": {
     "jsdom": "^23.0.0"
